--- a/airbnb/src/css/SlickCategory.css
+++ b/airbnb/src/css/SlickCategory.css
@@ -3,7 +3,7 @@
   font-size: 20px;
   line-height: 1;
   opacity: .75;
-  color: black;
+  color: #717171;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
